cmake_minimum_required(VERSION 3.10)
project(lab2)

SET(CMAKE_C_COMPTLER GCC)
set(CMAKE_CXX FLAGS -fexec-charset=GBK)
add_definitions(-std=c++11)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/stopwait SRC_LIST_StopWait)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/gbn SRC_LIST_GBN)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/sr SRC_LIST_SR)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/tcp SRC_LIST_TCP)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_EXECUTABLE(stop_wait ${SRC_LIST_StopWait})
ADD_EXECUTABLE(gbn ${SRC_LIST_GBN})
add_executable(sr ${SRC_LIST_SR})
add_executable(tcp ${SRC_LIST_TCP})

FIND_LIBRARY(NETSIM_LIB libnetsim.a  ${PROJECT_SOURCE_DIR}/lib)
TARGET_LINK_LIBRARIES(stop_wait  ${NETSIM_LIB})
TARGET_LINK_LIBRARIES(gbn  ${NETSIM_LIB})
TARGET_LINK_LIBRARIES(sr ${NETSIM_LIB})
TARGET_LINK_LIBRARIES(tcp ${NETSIM_LIB})